--- a/b2g/config/emulator/config.json
+++ b/b2g/config/emulator/config.json
@@ -20,5 +20,6 @@
         }
     },
     "b2g_manifest": "emulator.xml",
-    "b2g_manifest_branch": "master"
+    "b2g_manifest_branch": "master",
+    "b2g_manifest_intree": true
 }
